--- a/ifpitaco/res/values/strings.xml
+++ b/ifpitaco/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ifpitaco</string>
+    <string name="ifpitaco">IFPitaco</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
 
