--- a/wiki/IFPitaco.wiki
+++ b/wiki/IFPitaco.wiki
@@ -1,9 +1,9 @@
   <font color="blue">
-  <h2> <i>IFPITACO</i> </h2>
+  <h2> <i>Diagrama de caso de Uso</i> </h2>
   </font>
 
-  <img src="http://i61.tinypic.com/2ibzzme.jpg" height="70"/>
   <br/>
- <ul>
-   <li> <a href="http://i58.tinypic.com/dvqxpt.png" target="_blank">Diagrama de Caso de uso </a> </li>
- </ul>
+
+   <a href="http://i58.tinypic.com/dvqxpt.png" target="_blank">
+<img  src="http://i58.tinypic.com/dvqxpt.png"/img>
+  </a>
