--- a/wiki/Diagrama_Caso_Uso.wiki
+++ b/wiki/Diagrama_Caso_Uso.wiki
@@ -1,9 +1,6 @@
   <font color="blue">
   <h2> <i>Diagrama de caso de Uso</i> </h2>
   </font>
-
   <br/>
-
-   <a href="http://i58.tinypic.com/dvqxpt.png" target="_blank">
-<img  src="http://i58.tinypic.com/dvqxpt.png"/img>
+   <a href="http://i59.tinypic.com/wjt2bt.png"><img  src="http://i59.tinypic.com/wjt2bt.png"/img>
   </a>
