Primeira versão do diagrama de classes.

--- a/wiki/Diagrama_de_Classes.wiki
+++ b/wiki/Diagrama_de_Classes.wiki
@@ -2,4 +2,5 @@
   <h2> <i>Diagrama de Classes</i> </h2>
   </font>
   <br/>
-   <a href="http://tinypic.com?ref=2dm9lrc" target="_blank"><img src="http://i62.tinypic.com/2dm9lrc.png" border="0""></a>
+   <a href="http://i62.tinypic.com/2dm9lrc.png"><img  src="http://i62.tinypic.com/2dm9lrc.png"/>
+  </a>
