Edited wiki page Banco_de_Dados through web user interface.

--- a/wiki/Banco_de_Dados.wiki
+++ b/wiki/Banco_de_Dados.wiki
@@ -1,13 +1,21 @@
 -- -----------------------------------------------------
+
 -- Schema BD_IFPitaco
--- -----------------------------------------------------
-CREATE SCHEMA IF NOT EXISTS `BD_IFPitaco` DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci ;
-USE `BD_IFPitaco` ;
 
 -- -----------------------------------------------------
--- Table Cargo
+
+CREATE SCHEMA IF NOT EXISTS `BD_IFPitaco` DEFAULT CHARACTER SET utf8
+COLLATE utf8_general_ci ;
+USE `BD_IFPitaco` ;
+
+
 -- -----------------------------------------------------
-CREATE TABLE Cargo(
+
+-- Table Cargo
+
+-- -----------------------------------------------------
+
+CREATE TABLE Cargo(                                              
   ID_Cargo INT NOT NULL,
   Nome_Cargo VARCHAR(30) NOT NULL,
   PRIMARY KEY (`ID_Cargo`));
