--- a/wiki/Banco_de_Dados.wiki
+++ b/wiki/Banco_de_Dados.wiki
@@ -1,4 +1,4 @@
-<pre/>-- -----------------------------------------------------
+<pre>-- -----------------------------------------------------
 
 -- Schema BD_IFPitaco
 
