Foi criado um background e uma activity de login.

--- a/ifpitaco_mobile/res/values/strings.xml
+++ b/ifpitaco_mobile/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_opinar">Opinar</string>
     <string name="title_activity_fiscalizar">Fiscalizar</string>
     <string name="title_activity_avaliar">Avaliar</string>
+    <string name="title_activity_login">Login</string>
 
 </resources>
