--- a/trunk/ifpitaco_mobile/res/values/strings.xml
+++ b/trunk/ifpitaco_mobile/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="title_activity_avaliacoes">Avaliações</string>
     <string name="title_activity_cadastrar">CadastrarActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_post">PostActivity</string>
+    <string name="title_activity_enquete">EnqueteActivity</string>
 
 </resources>
