--- a/trunk/ifpitaco_mobile/res/values/strings.xml
+++ b/trunk/ifpitaco_mobile/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_post">PostActivity</string>
     <string name="title_activity_enquete">EnqueteActivity</string>
+    <string name="title_activity_loginteste">Loginteste</string>
+    <string name="title_activity_perfil">PerfilActivity</string>
 
 </resources>
